--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MERN stack ToDo App",
   "main": "webapp.js",
   "scripts": {
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
